--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,3 +1,10 @@
+// ion-content,
+// .coffee-container,
+// .image-banner,
+// .product-label {
+//     border: 1px solid red;
+//     /* Debug styles */
+// }
 /* Header Styles */
 ion-header {
     --background: #332218;
@@ -64,20 +71,16 @@ ion-icon {
 /* Content Styles */
 ion-content {
     display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
     flex-direction: column;
-    height: 100%;
-    padding: 20px;
-    --background: #F9F2ED;
+    height: calc(100% - 230px);
     overflow-y: auto;
-    // z-index: ;
 }
 ion-page {
-    height: 100%;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 }
+
 /* Snacks Styles */
 .coffee-container {
     display: flex;
@@ -151,12 +154,13 @@ ion-page {
 .image-banner img {
     width: 90%;
     height: auto;
-    object-fit: cover;
+    object-fit: fill;
     border-radius: 15px;
     display: block;
-    margin-top: 20px;
+    margin-top: 15px;
     max-height: 200px;
 }
+
 
 /* Product Label Styles */
 .product-label {
@@ -164,7 +168,7 @@ ion-page {
     font-size: 16px;
     font-weight: 800;
     text-align: left;
-    margin: 20px 0 10px 20px;
+    margin: 0px 0 5px 20px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -177,11 +181,30 @@ ion-page {
     text-transform: none;
 }
 
+.best-label{
+    margin-top: 10px;
+    margin-bottom: 0;
+}
+.hot-label{
+    margin-top: -5px;
+}
+.noncoffee-label{
+    margin-top: -5px;
+    margin-bottom: 0;
+}
+.cold-label{
+    margin-bottom: 0;
+}
+.pastry-label {
+    margin-bottom: -10px
+}
+
 /* Swiper Container */
 .swiper-container {
     width: 100%;
     padding-left: 10px;
     z-index: 10;
+    height: auto;
 }
 
 /* Slide Styles */
@@ -200,7 +223,7 @@ app-product-card {
     margin-top: 10px;
 }
 
-// FOOTER
+/* FOOTER */
 .footer {
     position: fixed;
     bottom: 0;
@@ -210,9 +233,9 @@ app-product-card {
     display: flex;
     justify-content: space-around;
     align-items: center;
-    border-top: 1px solid #ccc;
+    border-top: 2px solid #F9F2ED;
     color: white;
-
+    z-index: 1;
 }
 
 .footer-button {
@@ -228,13 +251,13 @@ app-product-card {
     font-size: 24px;
 }
 
-
-
-// FOOTER
-
+/* Responsive Style */
 @media (max-width: 768px) {
     .content {
         max-width: 80%;
+    }
+    .content h1 {
+        font-size: 1.5rem;
     }
 
     .view-menu {
@@ -252,19 +275,26 @@ app-product-card {
         width: 250px;
         height: 210px;
     }
-
+    
+    .image-banner img {
+        width: 95%;
+    }
     .product-label {
-        font-size: 14px;
+        font-size: 20px;
     }
 
     .see-more-button {
-        font-size: 12px;
+        font-size: 16px;
+    }
+    .best-label{
+        margin-top: 20px;
+        margin-bottom: 0;
     }
 }
 
 @media (max-width: 480px) {
     .content h1 {
-        font-size: 1rem;
+        font-size: 1.1rem;
     }
 
     .view-menu {
@@ -285,25 +315,30 @@ app-product-card {
     .content {
         max-width: 100%;
     }
-
+    
+    .image-banner img {
+        width: 90%;
+    }
     .image {
         width: 140px;
         height: 180px;
     }
 
     .product-label {
-        font-size: 12px;
+        font-size: 16px;
     }
 
     .see-more-button {
-        font-size: 10px;
+        font-size: 14px;
     }
 }
 @media (max-width: 320px) {
     .content h1 {
         font-size: 0.9rem;
     }
-
+    .coffee-container {
+        margin-top: -10px;
+    }
     .view-menu {
         font-size: 0.7rem;
         padding: 3px 0px;
@@ -329,10 +364,10 @@ app-product-card {
     }
 
     .product-label {
-        font-size: 12px;
+        font-size: 14px;
     }
 
     .see-more-button {
-        font-size: 10px;
+        font-size: 12px;
     }
 }
