added landing page

--- a/src/app/onboarding/onboarding.page.html
+++ b/src/app/onboarding/onboarding.page.html
@@ -50,8 +50,8 @@
 
   <!-- Get Started Button Outside the Swiper -->
   <div class="button-container">
-      <a routerLink="/signup">
-        <app-custom-button text="Register" customClass="signUpButton"></app-custom-button>
+      <a routerLink="/onboarding-2">
+        <app-custom-button text="Get Started" customClass="signUpButton"></app-custom-button>
       </a>
   </div>
 </ion-content>
