--- a/src/app/landing/landing.page.html
+++ b/src/app/landing/landing.page.html
@@ -1,13 +1,4 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>landing</ion-title>
-  </ion-toolbar>
-</ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">landing</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content fullscreen>
+  <img src="assets/images/logo_trans.gif" alt="Logo Transition" width="100%" class="centered-img" />
 </ion-content>
