--- a/src/app/login/login.page.scss
+++ b/src/app/login/login.page.scss
@@ -249,14 +249,15 @@ ion-icon {
 }
 
 .modal-title {
-    font-size: 24px;
+    font-size: 14px;
     font-weight: bold;
     margin: 10px 0;
     color: #633E27;
+    font-family: Poppins, sans-serif;
 }
 
 .modal-text {
-    font-size: 12px;
+    font-size: 10px;
     color: #666;
     margin-bottom: 20px;
 }
@@ -265,6 +266,7 @@ ion-icon {
     display: flex;
     justify-content: center;
     gap: 10px;
+
 }
 
 ion-button {
@@ -272,4 +274,5 @@ ion-button {
     --color: #633E27;
     --box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.4);
     text-transform: none;
+    font-size: 14px;
 }
