autoplay for landing page

--- a/src/app/onboarding/onboarding.page.html
+++ b/src/app/onboarding/onboarding.page.html
@@ -1,17 +1,18 @@
 <ion-content>
-  <swiper-container [spaceBetween]="50" [slidesPerView]="1" [loop]="false" [pagination]="{ clickable: true }"
-    (swiper)="onSwiper($event)" (slideChange)="onSlideChange($event)" [effect]="'slide'">
+  <!-- Swiper Container -->
+  <swiper-container #swiperContainer [spaceBetween]="50" [slidesPerView]="1" [loop]="false"
+    [pagination]="{ clickable: true }" (swiper)="onSwiper($event)" (slideChange)="onSlideChange($event)"
+    [effect]="'slide'">
 
     <!-- Slide 1 -->
     <swiper-slide>
       <div class="slide-content">
         <div class="image-container">
           <div class="overlay">
-            <img src="assets/images/Logo.png" alt="Logo" class="logo" />
+            <img src="assets/images/Logo.png" alt="DejaBrew Logo" class="logo" />
             <p class="top">Welcome to</p>
             <h1>DejaBrew</h1>
             <p class="bot">Have you been here before?</p>
-            <div class="pagination-container"></div>
           </div>
         </div>
       </div>
@@ -25,8 +26,7 @@
             <p class="top">Taste the</p>
             <h1>Familiarity</h1>
             <p class="bot">From the first sip to the last bite, our flavors evoke comforting memories with a twist of
-              something's new - like a sweet sense of deja vu.</p>
-            <div class="pagination-container"></div>
+              something new—like a sweet sense of déjà vu.</p>
           </div>
         </div>
       </div>
@@ -40,8 +40,7 @@
             <p class="top">Sip, Savor, and</p>
             <h1>Repeat</h1>
             <p class="bot last-bot">Whether it’s your go-to brew or a pastry that feels like home, every visit is a
-              delicious flashback you won’t forget</p>
-            <div class="pagination-container"></div>
+              delicious flashback you won’t forget.</p>
           </div>
         </div>
       </div>
@@ -50,8 +49,8 @@
 
   <!-- Get Started Button Outside the Swiper -->
   <div class="button-container">
-      <a routerLink="/onboarding-2">
-        <app-custom-button text="Get Started" customClass="signUpButton"></app-custom-button>
-      </a>
+    <a routerLink="/onboarding-2">
+      <app-custom-button text="Get Started" customClass="signUpButton"></app-custom-button>
+    </a>
   </div>
 </ion-content>
