--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -72,7 +72,7 @@ ion-icon {
 ion-content {
     display: flex;
     flex-direction: column;
-    height: calc(100% - 230px);
+    height: calc(100% - 240px);
     overflow-y: auto;
 }
 ion-page {
@@ -224,35 +224,115 @@ app-product-card {
 }
 
 /* FOOTER */
-.footer {
-    position: fixed;
-    bottom: 0;
+// .footer {
+//     position: fixed;
+//     bottom: 0;
+//     width: 100%;
+//     background-color :#332218;
+//     padding: 10px 0;
+//     display: flex;
+//     justify-content: space-around;
+//     align-items: center;
+//     border-top: 2px solid #F9F2ED;
+//     color: white;
+//     z-index: 1;
+// }
+
+// .footer-button {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+//     text-align: center;
+//     color: white;
+
+// }
+
+// .footer-button ion-icon {
+//     font-size: 24px;
+// }
+
+.navigation {
+    position: fixed !important;
     width: 100%;
-    background-color :#332218;
-    padding: 10px 0;
-    display: flex;
-    justify-content: space-around;
+    bottom: 0;
+    height: 70px;
+    background: #332218;
+    justify-content: center;
     align-items: center;
-    border-top: 2px solid #F9F2ED;
-    color: white;
+    display: flex;
+    z-index: 100;
+}
+
+.navigation ul {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    padding-left: 10px ;
+    padding-right: 10px;
+}
+
+.navigation ul li {
+    position: relative;
+    list-style: none;
+    width: 70px;
+    height: 70px;
     z-index: 1;
 }
 
-.footer-button {
+.navigation ul li a {
+    position: relative;
+    justify-content: center;
+    align-items: center;
     display: flex;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
-    color: white;
-
+    width: 100%;
 }
 
-.footer-button ion-icon {
-    font-size: 24px;
+.navigation ul li a .footer-icon {
+    position: relative;
+    display: flex;
+    line-height: 75px;
+    font-size: 1.5em;
+    text-align: center;
+    transition: 0.5s;
+    color: white;
+    transform: translateY(20px);
+}
+
+.navigation ul li.active a .footer-icon {
+    transform: translateY(-15px);
+}
+
+.navigation ul li a .text {
+    position: absolute;
+    color: white;
+    font-weight: 400;
+    font-size: 0.75em;
+    letter-spacing: 0.05em;
+    transition: 0.5s;
+    opacity: 0;
+}
+
+.navigation ul li.active a .text {
+    opacity: 1;
+    transform: translateY(40px);
+}
+
+.indicator {
+    position: absolute;
+    width: 70px;
+    height: 70px;
+    top: -50%;
+    background: #B6734E;
+    border-radius: 50%;
+    border: 6px solid #F9F2ED;
 }
 
 /* Responsive Style */
 @media (max-width: 768px) {
+    ion-content{
+        height: calc(100% - 230px);
+    }
     .content {
         max-width: 80%;
     }
@@ -290,9 +370,17 @@ app-product-card {
         margin-top: 20px;
         margin-bottom: 0;
     }
+
+    .navigation ul {
+        padding-left: 80px ;
+        padding-right: 70px;
+    }
 }
 
 @media (max-width: 480px) {
+    ion-content{
+        height: calc(100% - 238px);
+    }
     .content h1 {
         font-size: 1rem;
     }
@@ -330,6 +418,10 @@ app-product-card {
 
     .see-more-button {
         font-size: 14px;
+    }
+    .navigation ul {
+        padding-left: 30px ;
+        padding-right: 20px;
     }
 }
 @media (max-width: 320px) {
@@ -369,6 +461,10 @@ app-product-card {
 
     .see-more-button {
         font-size: 12px;
+    }
+    .navigation ul {
+        padding-left: 10px ;
+        padding-right: 0px;
     }
 }
 
